modifed to use Excel sheet

--- a/example.env
+++ b/example.env
@@ -1,9 +1,5 @@
-SOURCE_FILE=
-TARGET_DIRECTORY=
-PDF_DIRECTORY=
-TARGET_FILE=
-__DATE__=
-__SENATOR_NAME__=
-__DISTRICT_NO__=
-__ROOM_NO__=
-__CITY__=
+WORD_TEMPLATE_SOURCE_FILE=C:\name\Desktop\word.docx
+WORD_FILES_CREATED=C:\name\Desktop\word_files
+PDF_FILES_CREATED=C:\name\Desktop\pdf_files
+XL_FILE_LOCATION=C:\name\Desktop\Excel-file.xlsx
+WORKSHEET_NAME=Sheet1
